--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="/home/ivan/Documents/Godot_v4.0.3-stable_linux.x86_64"
+executable_path="D:/XD/steamapps/common/Godot Engine/godot.windows.opt.tools.64.exe"
 tile_source_sort=0
 
 [debug_options]
