--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
-dock_hsplit_3=-354
+dock_hsplit_2=227
+dock_hsplit_3=-162
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,13 +16,13 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://scenes/main_menu.tscn", "res://scenes/lvl1.tscn", "res://scenes/f4gg.tscn", "res://scenes/house_1.tscn", "res://scenes/chebupel.tscn"]
+open_scenes=["res://scenes/main_menu.tscn", "res://scenes/lvl1.tscn", "res://scenes/chebupel.tscn", "res://scenes/woman.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/Chebupel.gd", "res://scripts/f4gg.gd", "res://scripts/main_menu.gd"]
-open_help=[]
-script_split_offset=70
+open_scripts=["res://scripts/Chebupel.gd", "res://scripts/f4gg.gd", "res://scripts/main_menu.gd", "res://scripts/woman.gd"]
+open_help=["CharacterBody2D"]
+script_split_offset=112
 list_split_offset=0
 
 [editor_log]
