--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -35,6 +35,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 4,
+"scroll_position": 4.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/woman.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 13,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
