more more sprites

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://scenes/main_menu.tscn", "res://scenes/lvl1.tscn", "res://scenes/chebupel.tscn", "res://scenes/woman.tscn"]
+open_scenes=["res://scenes/main_menu.tscn", "res://scenes/lvl1.tscn", "res://scenes/chebupel.tscn", "res://scenes/woman.tscn", "res://scenes/home.tscn"]
 
 [ScriptEditor]
 
