--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ open_scenes=["res://scenes/main_menu.tscn", "res://scenes/lvl1.tscn", "res://sce
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/Chebupel.gd", "res://scripts/f4gg.gd", "res://scripts/main_menu.gd", "res://scripts/woman.gd"]
+open_scripts=["res://scripts/Chebupel.gd", "res://scripts/f4gg.gd", "res://scripts/home.gd", "res://scripts/lvl1.gd", "res://scripts/main_menu.gd", "res://scripts/woman.gd"]
 open_help=["CharacterBody2D"]
 script_split_offset=112
 list_split_offset=0
