lvl1 was chanched

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -24,7 +24,7 @@ project_settings=Rect2(510, 190, 900, 700)
 
 [color_picker]
 
-recent_presets=PackedColorArray(1, 1, 1, 1, 0.234828, 0.0904614, 0.0614017, 1, 0.235294, 0.886275, 0.0627451, 1)
+recent_presets=PackedColorArray(1, 1, 1, 1, 0.234828, 0.0904614, 0.0614017, 1, 0.235294, 0.886275, 0.0627451, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0.981159, 0, 0.36119, 1)
 
 [project_settings]
 
