--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -8,7 +8,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=227
-dock_hsplit_3=-162
+dock_hsplit_3=-285
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,12 +16,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://scenes/main_menu.tscn", "res://scenes/lvl1.tscn"]
+open_scenes=["res://scenes/main_menu.tscn", "res://scenes/lvl1.tscn", "res://scenes/chebupel.tscn", "res://scenes/enemy1.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/Chebupel.gd", "res://scripts/f4gg.gd", "res://scripts/home.gd", "res://scripts/lvl1.gd", "res://scripts/main_menu.gd", "res://scripts/woman.gd"]
-open_help=["CharacterBody2D"]
+open_scripts=["res://scripts/Chebupel.gd", "res://scripts/enemy1.gd", "res://scripts/f4gg.gd", "res://scripts/home.gd", "res://scripts/lvl1.gd", "res://scripts/main_menu.gd", "res://scripts/woman.gd"]
+open_help=["@GlobalScope", "CharacterBody2D"]
 script_split_offset=112
 list_split_offset=0
 
