--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,12 +16,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://scenes/main_menu.tscn", "res://scenes/lvl1.tscn", "res://scenes/chebupel.tscn", "res://scenes/slime.tscn", "res://scenes/home.tscn", "res://scenes/pausemenu.tscn", "res://scenes/deathmeny.tscn", "res://scenes/music.tscn"]
+open_scenes=["res://scenes/main_menu.tscn", "res://scenes/lvl1.tscn", "res://scenes/chebupel.tscn", "res://scenes/slime.tscn", "res://scenes/home.tscn", "res://scenes/pausemenu.tscn", "res://scenes/deathmeny.tscn", "res://scenes/woman.tscn", "res://scenes/forest.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/Chebupel.gd", "res://scripts/deathmeny.gd", "res://scripts/enemy1.gd", "res://scripts/f4gg.gd", "res://scripts/global.gd", "res://scripts/home.gd", "res://scripts/lvl1.gd", "res://scripts/main_menu.gd", "res://scripts/music.gd", "res://scripts/pausemenu.gd", "res://scripts/slime.gd", "res://scripts/woman.gd"]
-open_help=["@GlobalScope", "AudioStreamPlayer2D", "CanvasItem", "CharacterBody2D"]
+open_scripts=["res://scripts/Chebupel.gd", "res://scripts/deathmeny.gd", "res://scripts/enemy1.gd", "res://scripts/f4gg.gd", "res://scripts/forest.gd", "res://scripts/global.gd", "res://scripts/home.gd", "res://scripts/lvl1.gd", "res://scripts/main_menu.gd", "res://scripts/music.gd", "res://scripts/pausemenu.gd", "res://scripts/settings.gd", "res://scripts/slime.gd", "res://scripts/woman.gd"]
+open_help=["@GlobalScope", "AudioStreamPlayer2D", "CanvasItem", "CharacterBody2D", "DisplayServer", "ProjectSettings"]
 script_split_offset=112
 list_split_offset=0
 
